feat: [ES] 부족 주문 건 필터, 검색 추가 구현